opam-version: "2.0"
version: "dev"
maintainer: "yallop@gmail.com"
authors: "yallop@gmail.com"
tags: ["org:ocamllabs" "org:mirage"]
homepage: "https://github.com/ocamllabs/ocaml-ctypes"
bug-reports: "http://github.com/ocamllabs/ocaml-ctypes/issues"
depends: ["ocaml"]
post-messages: "This package requires libffi on your system" {failure}
depexts: [
  ["libffi-dev"] {os-distribution = "debian"}
  ["libffi-dev"] {os-distribution = "ubuntu"}
  ["libffi"] {os = "macos" & os-distribution = "homebrew"}
  ["libffi-devel"] {os-distribution = "centos"}
  ["libffi-devel"] {os-distribution = "oraclelinux"}
  ["libffi-devel"] {os-distribution = "fedora"}
  ["libffi-dev"] {os-distribution = "alpine"}
  ["libffi-devel"] {os-distribution = "opensuse"}
]
dev-repo: "git+http://github.com/ocamllabs/ocaml-ctypes.git"
