(executable
  (name driver)
  (modules driver)
  (libraries ctypes test_constantss_stubs tests_common))

(rule
  (targets generated_stubs.c)
  (action (run %{exe:driver.exe} --c-file %{targets})))

(rule
  (targets generated_bindings.ml)
  (action (run %{exe:driver.exe} --ml-file %{targets})))

(rule
  (targets generated_struct_stubs.c)
  (action (run %{exe:driver.exe} --c-struct-file %{targets})))

(rule
  (targets generated_struct_bindings%{ext_exe})
  (deps generated_struct_bindings.c)
  (action (run %{cc} -o %{targets} %{deps})))

(rule
  (targets generated_struct_bindings.ml)
  (deps generated_struct_bindings.exe)
  (action (with-stdout-to %{targets} (run %{deps}))))

(library
 (name test_constants_bindings)
 (wrapped false)
 (c_names generated_stubs)
 (modules generated_bindings generated_struct_bindings)
 (libraries ctypes test_functions)
) 
